<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/ctg_name_coffee"
            android:id="@+id/id_category_coffee"
            android:icon="@drawable/ic_coffee"/>
        <item android:title="@string/ctg_name_tea"
            android:id="@+id/id_category_tea"
            android:icon="@drawable/ic_coffee"/>
        <item android:title="@string/ctg_name_cocoa"
            android:id="@+id/id_category_cocoa"
            android:icon="@drawable/ic_coffee"/>
        <item android:title="@string/ctg_name_cold_drink"
            android:id="@+id/id_category_cold_drink"
            android:icon="@drawable/ic_cold_drink"/>
        <item android:title="@string/ctg_name_smoothie"
            android:id="@+id/id_category_smoothie"
            android:icon="@drawable/ic_cold_drink"/>
        <item android:title="@string/ctg_name_fresh"
            android:id="@+id/id_category_fresh"
            android:icon="@drawable/ic_cold_drink"/>
        <item android:title="@string/ctg_name_milkshake"
            android:id="@+id/id_category_milkshake"
            android:icon="@drawable/ic_cold_drink"/>
        <item android:title="@string/ctg_name_mulled_wine"
            android:id="@+id/id_category_mulled_wine"
            android:icon="@drawable/ic_cold_drink"/>
        <item android:title="@string/ctg_name_author_drink"
            android:id="@+id/id_category_author_drink"
            android:icon="@drawable/ic_cold_drink"/>
    </group>

</menu>